<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:text="@string/main_title"
            style="@style/TitleStyle"/>

        <Button android:id="@+id/first_button"
            android:text="@string/first_app"
            style="@style/ButtonStyle"/>

        <Button android:id="@+id/second_button"
            android:text="@string/second_app"
            style="@style/ButtonStyle"/>

        <Button android:id="@+id/third_button"
            android:text="@string/third_app"
            style="@style/ButtonStyle"/>

        <Button android:id="@+id/fourth_button"
            android:text="@string/fourth_app"
            style="@style/ButtonStyle"/>

        <Button android:id="@+id/fifth_button"
            android:text="@string/fifth_app"
            style="@style/ButtonStyle"/>

        <Button android:id="@+id/myportfolio_button"
            android:text="@string/myportfolio_app"
            style="@style/CapstoneStyle"/>
    </LinearLayout>

</RelativeLayout>
